--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,10 +3,13 @@
 
 
 body {
-  margin: 0;
+  margin: 10;
+  display: flex;
+  flex-direction: column; 
   font-family: Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
