--- a/web/src/styles/Navbar.css
+++ b/web/src/styles/Navbar.css
@@ -4,7 +4,8 @@
     align-items: center;
     padding: 0.5rem;
     background-color: #f0f0f0;
-    height: 40px;
+    font-family: Roboto, sans-serif;
+    height: 50px;
   }
   
   .navbar-left {
@@ -14,6 +15,8 @@
   
   .navbar-logo {
     margin-right: 1rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
     height:35px;
     width:35px;
   }
@@ -21,6 +24,8 @@
   .navbar-company-name {
     font-weight: bold;
     margin-right: 1rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
   }
   
   .navbar-links-container {
@@ -34,6 +39,7 @@
     border-radius: 5px;
     padding: 0.5rem 1rem;
     margin-right: 1rem;
+    margin-bottom: 1rem;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
   }
@@ -52,6 +58,8 @@
     background-color: #007bff;
     color: #fff;
     padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    margin-right: 2rem;
     border: none;
     border-radius: 5px;
     cursor: pointer;
