--- a/web/src/App.css
+++ b/web/src/App.css
@@ -27,6 +27,15 @@
 .App-link {
   color: #61dafb;
 }
+.navbar-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  
+}
+
 
 @keyframes App-logo-spin {
   from {
