--- a/web/src/styles/Navbar.css
+++ b/web/src/styles/Navbar.css
@@ -1,11 +1,13 @@
 .navbar {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
     background-color: #f0f0f0;
     font-family: Roboto, sans-serif;
-    height: 50px;
+    height: 60px;
+    z-index: 1000;
   }
   
   .navbar-left {
@@ -45,9 +47,9 @@
   }
   
   .navbar-link-box.active {
-    background-color: #f5f5f5;
-    color: #4700e1;
-    border: 1px solid #0c5af8;
+    background-color: #164863;
+    color: #00ddff;
+    border: 0px solid #00ddff;
   }
   
   .navbar-right {
@@ -55,8 +57,8 @@
   }
   
   .navbar-button {
-    background-color: #007bff;
-    color: #fff;
+    background-color: #164863;
+    color: #00ddff;
     padding: 0.5rem 1rem;
     margin-bottom: 1rem;
     margin-right: 2rem;
@@ -65,3 +67,4 @@
     cursor: pointer;
   }
   
+ 
