--- a/web/src/styles/Signup.css
+++ b/web/src/styles/Signup.css
@@ -1,6 +1,6 @@
 .container{
     width: 50%; 
-    height: 140vh; 
+    height: 200vh; 
     border: 0px solid #ccc; 
     border-radius: 1%;
     box-shadow: 2px 2px 10px #5b4cdda7; 
@@ -8,6 +8,7 @@
     flex-direction: column;
     margin: 0 auto;
     margin-top: 100px;
+    font-family: Roboto;
 }
 
 .field-container{
@@ -29,4 +30,4 @@
     cursor: pointer;
     text-align: center; /* Center text */
   }
-  
+   
