--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Arial:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap")
 
 
 body {
   margin: 10;
   display: flex;
   flex-direction: column; 
-  font-family: Roboto, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
