--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Arial:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap")
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
 
 body {
