--- a/web/src/styles/Home.css
+++ b/web/src/styles/Home.css
@@ -1,41 +1,8 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
-.App {
-  text-align: center;
-  background-color: #fff;
- 
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-nav li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-section {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-#home {
-  background-color: #f0f0f0;
-}
-
-#products {
-  background-color: #ddd;
-}
-
-#aboutus {
-  background-color: #ccc;
+.navbar-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  
 }
