--- a/web/src/styles/Navbar.css
+++ b/web/src/styles/Navbar.css
@@ -1,6 +1,20 @@
+.container-nav{
+  display: flex;
+  flex-direction: column;
+} 
+
+.navbar-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  
+}
 .navbar {
     position: fixed;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
@@ -67,4 +81,13 @@
     cursor: pointer;
   }
   
+ .outlet{
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  margin: 0; 
+  padding: 0;
  
+  
+
+ }
