--- a/web/src/styles/Repair.css
+++ b/web/src/styles/Repair.css
@@ -4,9 +4,10 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
+    font-size: 12px;
 }
 .RepairContainer1{
-    flex: 2;
+    flex: 3;
     /* Takes up 50% of the available space */
     background-color: lightblue;
     padding: 0;
@@ -87,11 +88,12 @@ h2{
 .parts{
 	border-collapse:collapse;
 	width:100%;
+    
 }
 
 .parts td, .parts th{
 	border:1px solid #ddd;
-	padding:5px;
+	padding:10px;
 }
 
 .parts tr:nth-child(even){
