--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -60,8 +60,15 @@
     display: flex;
     flex-direction: column;
     margin:10px;
+    padding:5px;
 
  }
 
+ .circle-kawishka{
+    width:100px;
+    height:105px;
+    border-radius: 50%;
+    background-color: red;
+ }
 
 
