--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -1,9 +1,10 @@
 .container-request{
     display: flex;
     flex-direction: row;
-    position: relative;
+    width: 100%;
+    height: 100vh;
     top :0 ;
-    left :200px;
+    margin-left :200px;
     background-color: #EEF2F5;
 }
  .process-request{
