--- a/web/src/styles/Repair.css
+++ b/web/src/styles/Repair.css
@@ -113,4 +113,49 @@ h2{
   background-color: #22A1CB;
   color: white;
 }
+.Add-new-Form {
+    position: fixed;
+    z-index: 1;
+    margin: 30px;
+}
+  
+.Add-New-Form-card {
+    width: 500px;
+    height: 550px;
+    margin: auto;
+    background-color:white;
+    box-shadow:0 0 10px rgba(231, 231, 231, 0.1);
+    border-radius: 4px;
+   
+}
+label {
+    display: block;
+    font-size: 12px;
+  }
 
+  input, select {
+    width: 90%;
+    padding: 4px;
+    margin-bottom: 6px;
+    box-sizing: border-box;
+  }
+  button {
+    background-color: #09BEB1;
+    color: white;
+    text-align: right;
+    padding: 3px 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    
+  
+  }
+
+  button:hover {
+    background-color: #09BEB1;
+  }
+
+.close-button{
+  display: block;
+    
+}
