--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100vh;
     top :0 ;
+    margin-top: 55px;
     margin-left :200px;
     background-color: #808386;
 }
@@ -29,6 +30,7 @@
 
  .incoming-request{
     display: flex;
+    flex-direction: column;
     width: 92%;
     margin-top: 4%;
     margin-left: 4%;
@@ -102,8 +104,9 @@
 
 .user-details{
    display: flex;
-   width: 92%;
-   margin-top: 4%;
-   margin-left: 4%;
+   width: 85%;
+   height: 15vh;
+   margin-top: 5%;
+   margin-left: 6%;
    background-color: #FFFFFF;
 }
