--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -31,7 +31,7 @@
  .incoming-request{
     display: flex;
     flex-direction: column;
-    width: 92%;
+    width: 100%;
     margin-top: 4%;
     margin-left: 4%;
     height: 50vh;
@@ -109,4 +109,51 @@
    margin-top: 5%;
    margin-left: 6%;
    background-color: #FFFFFF;
+}
+
+.header-bar{
+   display: flex;
+   font-size: 20;
+   width: 100%;
+   height: 5vh;
+   margin-top: 1.5%;
+   align-items: center;
+   color: #09BEB1;
+   background-color: #EEF2F5;
+}
+
+.horizontal-line{
+   border: 1px solid black;
+}
+
+.profile-circle{
+   display: inline-block;
+   margin-top: 2.5%;
+   margin-left: 1.5%;
+   width: 21%;
+   height: 80%;
+   border-radius: 50%;
+   background-color: #D9D9D9;
+}
+
+.name-box{
+   display: flex;
+   width: 25%;
+   height: 5vh;
+   margin-top: 8.8%;
+   margin-left: 2%;
+   flex-shrink: 0;
+   color: #09BEB1;
+   background-color: aqua;
+}
+
+.details-box{
+   display: flex;
+   flex-direction: column ;
+   width: 50%;
+   height: 15vh;
+   margin-top: 1%;
+   margin-left: 1%;
+   color: #8E8E97;
+   background-color: yellowgreen;
 }
