--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -68,7 +68,8 @@
     width:100px;
     height:105px;
     border-radius: 50%;
-    background-color: red;
+    background-color: #fff;
+    margin: 10px;
  }
 
 
