--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -130,7 +130,7 @@
    display: inline-block;
    margin-top: 2.5%;
    margin-left: 1.5%;
-   width: 21%;
+   width: 18%;
    height: 80%;
    border-radius: 50%;
    background-color: #D9D9D9;
@@ -145,6 +145,16 @@
    flex-shrink: 0;
    color: #09BEB1;
    background-color: aqua;
+}
+
+.icon-box{
+   display: flex;
+   flex-direction: column;
+   margin-top: 1%;
+   margin-left: 1%;
+   color: #A1D3E5;
+   line-height: 500%;
+   background-color: brown;
 }
 
 .details-box{
