--- a/web/src/styles/Home.css
+++ b/web/src/styles/Home.css
@@ -1,8 +1,14 @@
-.navbar-wrapper {
-  position: fixed;
+.container-home {
+  display: flex;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
-  
+  background-color: #EEF2F5;
+  font-family: 'Roboto', sans-serif;
+}
+
+.outlet {
+  width: 100%;
+  height: 100vh;
 }
