--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -45,7 +45,7 @@
 
  .column-4{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #EEF2F5;
     margin:10px;
     width:95%;
@@ -55,12 +55,35 @@
 
  }
 
+ .innerRow-1{
+    display:flex;
+    height:30%;
+    margin: 10px;
+    
+    
+ }
+ .innerRow-2{
+    display:flex;
+    height:40%;
+    margin: 10px;
+ }
+
+ .item-1{
+    flex:1;
+    font-size: small;
+ }
+ .item-2{
+    flex:1;
+    
+ }
+ 
+
 
  .innerColumn-1{
-    display: flex;
-    flex-direction: column;
+    flex:1;
     margin:10px;
     padding:5px;
+    text-align: center;
 
  }
 
@@ -72,4 +95,35 @@
     margin: 10px;
  }
 
+ .ReservationServices{
+    margin: 10px;
+ }
+
+ 
+
+.button{
+    margin:15px;
+    border: 1px solid white;
+    border-radius:5px;
+ 
+    font-size:15px;
+    color:#0a0a0a;
+  
+    
+}
+
+.button1{
+    background-color:#09BEB1;
+
+}
+.button2{
+    background-color:#CB2269;
+}
+
+.button:hover{
+    cursor: pointer;
+    background-color: #fff;
+    color:#141111;
+    
+}
 
