--- a/web/src/styles/Home.css
+++ b/web/src/styles/Home.css
@@ -1,14 +1,15 @@
 .container-home {
   display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #EEF2F5;
-  font-family: 'Roboto', sans-serif;
+    position: absolute;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #EEF2F5;
+    font-family: 'Roboto', sans-serif;
 }
 
-.outlet {
-  width: 100%;
+.home-outlet {
+  width: 100vw;
   height: 100vh;
 }
