--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -11,13 +11,8 @@
  .view-request{
     display: flex;
     flex-direction: column;
-
-    width: 40%;
-    height: 100vh; /*vh = view point height */
-
     width: 35%;
     height: 90vh; /*vh = view point height */
-
     top: 5%;
     left: 4%;
     background-color: #EEF2F5;
@@ -27,7 +22,7 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    height: 87vh;
+    height: 87.3vh;
     margin-left:20px;
     left: 5%;
     border-radius: 2px;
@@ -54,16 +49,12 @@
  }
 
 .map{
-
    display: flex;
    /*flex-direction: column;*/
-   width: 93%;
-   height: 50%;
-   margin-top: 2%;
-
-   width:100%;
-   height:400px;
-   background-color: #FFFFFF;
+   margin-left: 2%;
+   width:96%;
+   height:300px;
+   background-color: #f11d1d;
 }
 
 /*.map-view{
@@ -84,11 +75,14 @@
    background-color: #EEF2F5;
 }*/
 
-.chatbox{
+.chat-box{
    display: flex;
-   /*flex-direction: column;*/
-   width: 93%;
-   background-color: #FFFFFF;
+   flex-direction: row;
+   margin-top: 1.5%;
+   margin-left: 2%;
+   width: 96%;
+   height: 235px;
+   background-color: #1cff10;
 }
 
 .process-request{
@@ -104,7 +98,7 @@
 .messagebox{
    display: flex;
    height: 60vh;
-   width: 92%;
+   width: 50%;
    margin-top: 4%;
    margin-left: 4%;
    margin-bottom: 4%;
@@ -113,8 +107,8 @@
 
 .user-details{
    display: flex;
-   width: 93%;
-   height: 12vh;
+   width: 50%;
+   height: 32vh;
    margin-top: 0.5%;
    margin-left: 3%;
    background-color: #EEF2F5;
